--- a/app/public/index.html
+++ b/app/public/index.html
@@ -24,9 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>BlockDojo</title>
   </head>
-  <body>
+  <body style="background: linear-gradient(125deg, rgb(52, 58, 64), rgb(23, 162, 184)); background-repeat: no-repeat;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
